[tool.poetry]
name = "random-nn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
optuna = "^3.6.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
numpy = "1.26.4"
torchvision = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
